force-app/main/default/objects/Service_Revenue_Actual__c/Service_Revenue_Actual__c.object-meta.xml
<CustomObject>
    <description>User Story ID: 80 and 284
This object is populated via integration to the billing system. Each record contains the service revenue numbers for the following product categories per month:
Voice
Other
Call Guide
M2M
MBB and Dual SIM
Internet and MPLS</description>
    <label>Service Revenue Actual</label>
    <nameField>
        <displayFormat>SA-{0000000}</displayFormat>
        <label>Sales Actual</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Revenue Actuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>