force-app/main/default/objects/Service_Revenue_Actual__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>User story ID: 80 
The account generating the revenue</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sales_Actuals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>