force-app/main/default/objects/Service_Revenue_Actual__c/fields/ACE__c.field-meta.xml
<CustomField>
    <fullName>ACE__c</fullName>
    <description>Service Revenue from product category &quot;ACE&quot;.</description>
    <inlineHelpText>Service Revenue from product category &quot;ACE&quot;.</inlineHelpText>
    <label>ACE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>