force-app/main/default/objects/Service_Revenue_Actual__c/fields/ACE_Call_Guide__c.field-meta.xml
<CustomField>
    <fullName>ACE_Call_Guide__c</fullName>
    <description>Service Revenue from product categories ACE and Call Guide.</description>
    <formula>ACE__c +  Call_Guide__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Service Revenue from product categories ACE and Call Guide.</inlineHelpText>
    <label>ACE (Call Guide)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>