force-app/main/default/objects/Service_Revenue_Actual__c/fields/Active_Sim_Cards_MBB__c.field-meta.xml
<CustomField>
    <fullName>Active_Sim_Cards_MBB__c</fullName>
    <description>User Story ID: 80</description>
    <inlineHelpText>The current amount of active Active Sim Cards (MBB) the account has.</inlineHelpText>
    <label>Active Sim Cards (MBB)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>