force-app/main/default/objects/Service_Revenue_Actual__c/fields/Active_Sim_Cards_Voice__c.field-meta.xml
<CustomField>
    <fullName>Active_Sim_Cards_Voice__c</fullName>
    <description>User Story ID: 80</description>
    <inlineHelpText>The current amount of Active Sim Cards (Voice) the Account has.</inlineHelpText>
    <label>Active Sim Cards (Voice)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>