force-app/main/default/objects/Service_Revenue_Actual__c/fields/Amount2__c.field-meta.xml
<CustomField>
    <fullName>Amount2__c</fullName>
    <description>The total Service Revenue amount across Enterprise product categories which the account is invoiced in the given month.</description>
    <formula>ACE_Call_Guide__c + Fixed__c + Internet_and_MPLS__c + MBB_DUAL_SIM_M2M__c + Mobile__c + Other__c + Unified_Communication__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total Service Revenue amount across Enterprise product categories which the account is invoiced in the given month.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>