force-app/main/default/objects/Service_Revenue_Actual__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>User story id: 80</description>
    <inlineHelpText>The total Service Revenue amount across ALL product categories which the account is invoiced in the given month.</inlineHelpText>
    <label>Amount (all)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>