force-app/main/default/objects/Service_Revenue_Actual__c/fields/Call_Guide__c.field-meta.xml
<CustomField>
    <fullName>Call_Guide__c</fullName>
    <description>Service Revenue from product category &quot;Call Guide&quot;.</description>
    <inlineHelpText>Service Revenue from product category &quot;Call Guide&quot;.</inlineHelpText>
    <label>Call Guide</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>