force-app/main/default/objects/Service_Revenue_Actual__c/fields/Colocation__c.field-meta.xml
<CustomField>
    <fullName>Colocation__c</fullName>
    <description>Service Revenue from product category &quot;Colocation&quot;.</description>
    <inlineHelpText>Service Revenue from product category &quot;Colocation&quot;.</inlineHelpText>
    <label>Colocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>