force-app/main/default/objects/Service_Revenue_Actual__c/fields/CVR_Number__c.field-meta.xml
<CustomField>
    <fullName>CVR_Number__c</fullName>
    <description>The CVR number of the Account that generated the Service Revenue.</description>
    <externalId>true</externalId>
    <inlineHelpText>The CVR number of the Account that generated the Service Revenue.</inlineHelpText>
    <label>CVR Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>