force-app/main/default/objects/Service_Revenue_Actual__c/fields/Fixed__c.field-meta.xml
<CustomField>
    <fullName>Fixed__c</fullName>
    <description>Service Revenue from product category &quot;Fixed&quot;.</description>
    <inlineHelpText>Service Revenue from product category &quot;Fixed&quot;.</inlineHelpText>
    <label>Fixed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>