force-app/main/default/objects/Service_Revenue_Actual__c/fields/Hosting__c.field-meta.xml
<CustomField>
    <fullName>Hosting__c</fullName>
    <description>Service Revenue from product category &quot;Hosting&quot;.</description>
    <inlineHelpText>Service Revenue from product category &quot;Hosting&quot;.</inlineHelpText>
    <label>Hosting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>