force-app/main/default/objects/Service_Revenue_Actual__c/fields/Internet_and_MPLS__c.field-meta.xml
<CustomField>
    <fullName>Internet_and_MPLS__c</fullName>
    <description>Service Revenue from product category &quot;Internet and MPLS&quot;.</description>
    <inlineHelpText>Service Revenue from product category &quot;Internet and MPLS&quot;.</inlineHelpText>
    <label>Internet and MPLS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>