force-app/main/default/objects/Service_Revenue_Actual__c/fields/Invoice_date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_date__c</fullName>
    <description>User Story ID: 80
The date the service revenue is invoiced by the finance dept.</description>
    <inlineHelpText>This is the date the service revenue is invoiced by the finance dept.</inlineHelpText>
    <label>Invoice date</label>
    <type>Date</type>
</CustomField>