force-app/main/default/objects/Service_Revenue_Actual__c/fields/IoT__c.field-meta.xml
<CustomField>
    <fullName>IoT__c</fullName>
    <description>Service Revenue from product category &quot;IoT&quot;.</description>
    <inlineHelpText>Service Revenue from product category &quot;IoT&quot;.</inlineHelpText>
    <label>IoT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>