force-app/main/default/objects/Service_Revenue_Actual__c/fields/M2M__c.field-meta.xml
<CustomField>
    <fullName>M2M__c</fullName>
    <description>Service Revenue from product category &quot;M2M&quot;.</description>
    <inlineHelpText>Service Revenue from product category &quot;M2M&quot;.</inlineHelpText>
    <label>M2M</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>