force-app/main/default/objects/Service_Revenue_Actual__c/fields/MBB__c.field-meta.xml
<CustomField>
    <fullName>MBB__c</fullName>
    <description>Service Revenue from product category &quot;MBB&quot;.</description>
    <inlineHelpText>Service Revenue from product category &quot;MBB&quot;.</inlineHelpText>
    <label>MBB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>