force-app/main/default/objects/Service_Revenue_Actual__c/fields/MBB_DUAL_SIM_M2M__c.field-meta.xml
<CustomField>
    <fullName>MBB_DUAL_SIM_M2M__c</fullName>
    <description>Service Revenue from product category &quot;MBB, DUAL SIM, M2M&quot;.</description>
    <formula>MBB__c +  M2M_IOT__c +  M2M__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Service Revenue from product category &quot;MBB, DUAL SIM, M2M&quot;.</inlineHelpText>
    <label>MBB, DUAL SIM, M2M</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>