force-app/main/default/objects/Service_Revenue_Actual__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Service Revenue from product category &quot;Mobile&quot;.</description>
    <inlineHelpText>Service Revenue from product category &quot;Mobile&quot;.</inlineHelpText>
    <label>Mobile</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>