force-app/main/default/objects/Service_Revenue_Actual__c/fields/No_Category__c.field-meta.xml
<CustomField>
    <fullName>No_Category__c</fullName>
    <description>Service Revenue that has no product category specified.</description>
    <inlineHelpText>Service Revenue that has no product category specified.</inlineHelpText>
    <label>No Category</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>