force-app/main/default/objects/Service_Revenue_Actual__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>Service Revenue from category &quot;Other&quot;, which is Colocation, Hosting, SMS Gateway, Telia Indoor Coverage, Telia Insight and Uncategorized.</description>
    <formula>Colocation__c + Hosting__c + SMS_Gateway__c +  Telia_Indoor_Coverage__c +  Telia_Insight__c + Uncategorized__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Service Revenue from category &quot;Other&quot;, which is Colocation, Hosting, SMS Gateway, Telia Indoor Coverage, Telia Insight and Uncategorized.</inlineHelpText>
    <label>Other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>