force-app/main/default/objects/Service_Revenue_Actual__c/fields/SMS_Gateway__c.field-meta.xml
<CustomField>
    <fullName>SMS_Gateway__c</fullName>
    <description>Service Revenue from product category &quot;SMS Gateway&quot;.</description>
    <inlineHelpText>Service Revenue from product category &quot;SMS Gateway&quot;.</inlineHelpText>
    <label>SMS Gateway</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>