force-app/main/default/objects/Service_Revenue_Actual__c/fields/Telia_Indoor_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Telia_Indoor_Coverage__c</fullName>
    <description>Service Revenue from product category &quot;Telia Indoor Coverage&quot;.</description>
    <inlineHelpText>Service Revenue from product category &quot;Telia Indoor Coverage&quot;.</inlineHelpText>
    <label>Telia Indoor Coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>