force-app/main/default/objects/Service_Revenue_Actual__c/fields/Telia_Insight__c.field-meta.xml
<CustomField>
    <fullName>Telia_Insight__c</fullName>
    <description>Service Revenue from product category &quot;Telia Insight&quot;.</description>
    <inlineHelpText>Service Revenue from product category &quot;Telia Insight&quot;.</inlineHelpText>
    <label>Telia Insight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>