force-app/main/default/objects/Service_Revenue_Actual__c/fields/Uncategorized__c.field-meta.xml
<CustomField>
    <fullName>Uncategorized__c</fullName>
    <description>Service Revenue from product category &quot;Uncategorized&quot;.</description>
    <inlineHelpText>Service Revenue from product category &quot;Uncategorized&quot;.</inlineHelpText>
    <label>Uncategorized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>