force-app/main/default/objects/Service_Revenue_Actual__c/fields/Unified_Communication__c.field-meta.xml
<CustomField>
    <fullName>Unified_Communication__c</fullName>
    <description>Service Revenue from product category &quot;Unified Communication&quot;.</description>
    <inlineHelpText>Service Revenue from product category &quot;Unified Communication&quot;.</inlineHelpText>
    <label>Unified Communication</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>