force-app/main/default/objects/Service_Revenue_Actual__c/fields/Unknown__c.field-meta.xml
<CustomField>
    <fullName>Unknown__c</fullName>
    <description>Service Revenue from a product category that is not known on the Salesforce side.</description>
    <inlineHelpText>Service Revenue from a product category that is not known on the Salesforce side.</inlineHelpText>
    <label>Unknown</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>