force-app/main/default/objects/Service_Revenue_Actual__c/fields/Voice__c.field-meta.xml
<CustomField>
    <fullName>Voice__c</fullName>
    <description>Service Revenue from product category &quot;Voice&quot;.</description>
    <inlineHelpText>Service Revenue from product category &quot;Voice&quot;.</inlineHelpText>
    <label>Voice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>